feat: 고정지출 감지 배치 프로세스 작성 및 감지된 고정지출 자동 추가